--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
   height: 80vh;
   cursor: grab;
   background-color: #ffffff;
-  transform-origin: 0 0; 
   transition: transform 0.1s ease-out;
 }
 
@@ -68,8 +67,9 @@
 /* Адаптивность для мобильных */
 @media (max-width: 991px) {
   #svg-map {
-    width: 100%;
+    width: 100%; 
     margin-right: 0 !important;
+    transition: transform 0.1s ease-out;
   }
   
   .sidebar-toggle {
